src/test/run-pass/issue-3257.rs
use option::*;

fn main() {
    match Some(true) {
      Some(false) => {
      }
      whatever if false => {
      }
      Some(true) => {
      }
      None => ()
    }
}
