src/test/compile-fail/issue-3222.rs
fn f(s: &str) {
    match s {
        "a" => (),
         _  => (),
    }
}

fn main() {}
